WIP Begin adding very broken note rendering

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <button id="connectButton">Connect</button>
     <br />
     <button id="connectLocalhostButton">Connect Localhost</button>
+    <p id="notesList">[a list of notes should appear here]</p>
     <p id="warning">Connection status unknown, press connect to re-try</p>
 
     <script type="module" src="/src/renderer.ts"></script>
